# recovery-agent

./: .coverage  .gitignore  README.md  config.yaml  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
recovery_agent/: config_service.py  main.py
recovery_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recovery_agent/analysis/: anomaly_detector.py
recovery_agent/config_service/: __init__.py  accessor.py  exceptions.py  loader.py  models.py  service.py
recovery_agent/intel/: queries.py
recovery_agent/restoration/: engine.py
recovery_agent/self_repair/: repair_generator.py
recovery_agent/tests/: test_config_service.py  test_repair_generator.py
recovery_agent/ui/: app.py
tests/: test_anomaly_detector.py  test_app.py  test_config_service.py  test_engine.py  test_main.py  test_repair_generator.py
